src/scss/components/_card-product.scss
.k-productcard {
  .k-figure {
    width: 80%;
    margin: auto;

    &--liner {
      padding-bottom: 100%;
    }
  }

  &--wideimg {
    .k-figure {
      width: 100%;
      border-radius: 0.33em;

      &--liner {
        padding-bottom: 65.2%;
      }
    }
  }

  &--title {
    text-align: center;
    margin-top: 1em;

    h3 {
      margin: 0;
      font-size: 120%;
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;

      a {
        color: $black;

        &:hover {
          color: $primary !important;
        }
      }
    }

    p {
      margin-top: 0;
    }
  }

  &--action {
    margin-top: 2em;

    .k-button {
      display: block;

      &:hover {
        color: $true-white !important;
      }
    }
  }

  &--reviews {
    position: relative;

    .k-accent-text {
      font-size: 80%;
    }

    ul {
      position: absolute;
      top: 0;
      left: 50%;
      transform: translateX(-50%);
      list-style-type: none;
      padding: 0;
      margin: 0;
    }

    li {
      display: inline-block;
    }

    svg {
      width: 1em;
    }
  }
}

